[project]
name = "data_gen"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dynamic = ["readme"]

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/plain" }

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
# https://github.com/astral-sh/ruff

select = [
    "A",
    "AIR",
    "B",
    "C",
    "C4",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "G",
    "I",
    "N",
    "NPY",
    "PD",
    "PL",
    "PT",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package.
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__.
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start on the first line.
    "D417", # Requires documentation for every function parameter.
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "tests",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py312"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
plugins = ['numpy.typing.mypy_plugin']

warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = false

[tool.coverage.run]
omit = ["*/.venv/*", "*/__pycache__/*"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
